@@ -51,6 +51,9 @@ BEGIN_C_DECLS
 void ibv_copy_qp_attr_from_kern(struct ibv_qp_attr *dst,
 				struct ibv_kern_qp_attr *src);
 
+void ibv_copy_ah_attr_from_kern(struct ibv_ah_attr *dst,
+				struct ibv_kern_ah_attr *src);
+
 void ibv_copy_path_rec_from_kern(struct ibv_sa_path_rec *dst,
 				 struct ibv_kern_path_rec *src);
 
